--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,16 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="white">#FAF9F9</color>
+    <color name="gray">#808080</color>
+    <color name="primary">#3F51B5</color>
+    <color name="primary_dark">#303F9F</color>
+    <color name="white_bg">#FFFFFF</color>
+    <color name="dark_gray_bg">#F5F5F5</color>
+    <color name="light_gray_bg">#EDEDED</color>
+    <color name="divider">#DCDCDC</color>
+    <color name="primary_text">#424242</color>
+    <color name="secondary_text">#9e9e9e</color>
+    <color name="button_bg">#36383E</color>
+    <color name="button_text">#E1DFDF</color>
 </resources>
