--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#36383E</color>
+    <color name="colorPrimaryDark">#36383E</color>
+    <color name="colorAccent">#36383E</color>
     <color name="white">#FAF9F9</color>
     <color name="gray">#808080</color>
     <color name="primary">#3F51B5</color>
@@ -14,5 +14,5 @@
     <color name="primary_text">#424242</color>
     <color name="secondary_text">#9e9e9e</color>
     <color name="button_bg">#36383E</color>
-    <color name="button_text">#E1DFDF</color>
+    <color name="button_text">#888383</color>
 </resources>
