--- a/app/src/main/res/layout/item_currency.xml
+++ b/app/src/main/res/layout/item_currency.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/view_item_currency"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:paddingHorizontal="20dp">
+    android:paddingHorizontal="20dp"
+    android:paddingTop="10dp">
+
+    <TextView
+        android:id="@+id/tv_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/selector_round_button"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="5dp"
+        android:text="id"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/tv_id"
         android:text="name" />
 
     <TextView
@@ -27,9 +42,9 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="20dp"
-        android:tint="@color/button_text"
         android:background="@null"
-        android:src="@drawable/ic_right_arrow" />
+        android:src="@drawable/ic_right_arrow"
+        android:tint="@color/button_text" />
 
     <TextView
         android:id="@+id/line"
